New pattern generator.  Just a quick squareburst.

--- a/projects/rgb_panel/Makefile
+++ b/projects/rgb_panel/Makefile
@@ -18,7 +18,7 @@ BOARD ?= icebreaker-double
 DEVICE = up5k
 PACKAGE = sg48
 
-NEXTPNR_ARGS = --pre-pack data/clocks.py
+NEXTPNR_ARGS = --pre-pack data/clocks.py --freq 30
 
 # Include default rules
 include ../../build/project-rules.mk
@@ -44,4 +44,3 @@ $(BUILD_TMP)/$(PROJ)-video.bin: $(BUILD_TMP)/$(PROJ).bin data/nyan_glitch_64x64x
 
 data-prog: $(BUILD_TMP)/$(PROJ)-video.bin
 	$(ICEPROG) $<
-
